<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_add"
          android:icon="@drawable/ic_action_add"
          android:title="@string/add"
          android:showAsAction="always" />
    <item android:id="@+id/action_edit"
          android:icon="@drawable/ic_action_edit"
          android:title="@string/edit"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_runscript"
          android:title="@string/action_runscript"
          android:icon="@drawable/ic_action_play"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_mouse"
          android:title="@string/action_mouse"
          android:icon="@drawable/ic_action_mouse"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_keyboard"
          android:title="@string/action_keyboard"
          android:icon="@drawable/ic_action_keyboard"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:showAsAction="never" />
</menu>
