<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/add_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/icon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/add_sp_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    
    <CheckBox
        android:id="@+id/add_cb_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/confirm" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:background="#bbbbbb" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/script"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    
    <RadioGroup
        android:id="@+id/rbtngrp_cat"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <RadioButton
	        android:id="@+id/rbtn_cat_system"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/script_category_system" />
	    <RadioButton
	        android:id="@+id/rbtn_cat_media"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/script_category_media" />
	    <RadioButton
	        android:id="@+id/rbtn_cat_apps"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/script_category_apps" />
	    <RadioButton
	        android:id="@+id/rbtn_cat_custom"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/script_category_custom" />
    </RadioGroup>
    
    
    
    
    <Spinner
        android:id="@+id/add_sp_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/add_et_scr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />


</LinearLayout>
</ScrollView>