<?xml version="1.0" encoding="utf-8"?>
<!--
** Copyright 2013 two forty four a.m. LLC <http://www.twofortyfouram.com>
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at <http://www.apache.org/licenses/LICENSE-2.0>
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/taskerplugin_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginTop="8dip"
        android:hint="@string/taskerplugin_message_hint1" />

    <TextView
        android:id="@+id/taskerplugin_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/script"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <RadioGroup
        android:id="@+id/taskerplugin_rbtngrp_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/taskerplugin_rbtn_cat_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/script_category_system" />
        <RadioButton
            android:id="@+id/taskerplugin_rbtn_cat_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/script_category_media" />
        <RadioButton
            android:id="@+id/taskerplugin_rbtn_cat_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/script_category_apps" />
        <RadioButton
            android:id="@+id/taskerplugin_rbtn_cat_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/script_category_custom" />
    </RadioGroup>




    <Spinner
        android:id="@+id/taskerplugin_add_sp_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/taskerplugin_add_et_scr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

</LinearLayout>